--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write 'src/**/*.{js,vue}'"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "core-js": "^2.6.5",
-    "markdown-it": "^10.0.0",
     "swiper": "^4.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
