--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint",
     "deploy-dist": "sh ./commands/deploy.sh",
     "eslint-fix": "eslint src/**/**/*.vue --fix",
-    "format-code": "prettier-eslint --write \"src/**/*.js\" \"src/**/*.vue\"",
+    "format-code": "npx prettier-eslint --write \"src/**/*.js\" \"src/**/*.vue\"",
     "format": "prettier --write 'src/**/*.{js,vue}'"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
+    "axios": "^0.26.1",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3"
@@ -25,15 +26,18 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.4",
+    "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^10.0.1",
+    "dart-sass": "^1.25.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^4.2.0",
+    "fontmin": "^0.9.9",
     "lint-staged": "^8.2.1",
-    "node-sass": "^7.0.0",
     "popper.js": "^1.15.0",
+    "prettier-eslint-cli": "^5.0.1",
     "raw-loader": "^3.1.0",
     "sass": "^1.22.0",
     "sass-loader": "^7.1.0",
