--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "NODE_ENV=production && vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy-dist": "sh ./commands/deploy.sh",
     "eslint-fix": "eslint src/**/**/*.vue --fix",
